--- a/one/users/templates/users/user_form.html
+++ b/one/users/templates/users/user_form.html
@@ -7,7 +7,7 @@
   <h1>{{ user.username }}</h1>
   <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
     {% csrf_token %}
-    {{ form|crispy }}
+    {{ form }}
     <div class="control-group">
       <div class="controls">
         <button type="submit" class="btn btn-primary">Update</button>
