Update template base

--- a/one/templates/layout/partials/header-layout/_header.html
+++ b/one/templates/layout/partials/header-layout/_header.html
@@ -19,8 +19,8 @@
     <!--end::Logo-->
     <!--begin::Header wrapper-->
     <div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1" id="kt_app_header_wrapper">
-      {% include './header/_menu/_menu.html' %}
-      {% include './header/_navbar.html' %}
+{#      {% include './header/_menu/_menu.html' %}#}
+{#      {% include './header/_navbar.html' %}#}
     </div>
     <!--end::Header wrapper-->
   </div>
