--- a/one/templates/layout/partials/header-layout/_toolbar.html
+++ b/one/templates/layout/partials/header-layout/_toolbar.html
@@ -2,7 +2,7 @@
 <div id="kt_app_toolbar" class="app-toolbar py-3 py-lg-6">
   <!--begin::Toolbar container-->
   <div id="kt_app_toolbar_container" class="app-container container-xxl d-flex flex-stack">
-    {% include './_page-title.html' %}
+{#    {% include './_page-title.html' %}#}
     <!--begin::Actions-->
     <div class="d-flex align-items-center gap-2 gap-lg-3">
       <!--begin::Secondary button-->
