--- a/one/templates/layout/partials/header-layout/search/_dropdown.html
+++ b/one/templates/layout/partials/header-layout/search/_dropdown.html
@@ -14,18 +14,18 @@
   <div data-kt-search-element="content" class="menu menu-sub menu-sub-dropdown p-7 w-325px w-md-375px">
     <!--begin::Wrapper-->
     <div data-kt-search-element="wrapper">
-      {% include './partials/_form-dropdown.html' %}
+{#      {% include './partials/_form-dropdown.html' %}#}
 
-      {% include './partials/_results.html' %}
+{#      {% include './partials/_results.html' %}#}
 
-      {% include './partials/_main.html' %}
+{#      {% include './partials/_main.html' %}#}
 
-      {% include './partials/_empty.html' %}
+{#      {% include './partials/_empty.html' %}#}
     </div>
     <!--end::Wrapper-->
-    {% include './partials/_advanced-options.html' %}
+{#    {% include './partials/_advanced-options.html' %}#}
 
-    {% include './partials/_preferences.html' %}
+{#    {% include './partials/_preferences.html' %}#}
   </div>
   <!--end::Menu-->
 </div>
