--- a/one/templates/layout/partials/sidebar-layout/_sidebar.html
+++ b/one/templates/layout/partials/sidebar-layout/_sidebar.html
@@ -3,13 +3,13 @@
      data-kt-drawer-activate="{default: true, lg: false}" data-kt-drawer-overlay="true" data-kt-drawer-width="225px"
      data-kt-drawer-direction="start" data-kt-drawer-toggle="#kt_app_sidebar_mobile_toggle">
 
-  {% include './sidebar/_logo.html' %}
+{#  {% include './sidebar/_logo.html' %}#}
 
 
-  {% include './sidebar/_menu.html' %}
+{#  {% include './sidebar/_menu.html' %}#}
 
 
-  {% include './sidebar/_footer.html' %}
+{#  {% include './sidebar/_footer.html' %}#}
 
 </div>
 <!--end::sidebar-->
