--- a/one/templates/partials/modals/create-app/_main.html
+++ b/one/templates/partials/modals/create-app/_main.html
@@ -184,11 +184,11 @@
           <div class="flex-row-fluid py-lg-5 px-lg-15">
             <!--begin::Form-->
             <form class="form" novalidate="novalidate" id="kt_modal_create_app_form">
-              {% include 'partials/modals/create-app/steps/_step-1.html' %}
-              {% include 'partials/modals/create-app/steps/_step-2.html' %}
-              {% include 'partials/modals/create-app/steps/_step-3.html' %}
-              {% include 'partials/modals/create-app/steps/_step-4.html' %}
-              {% include 'partials/modals/create-app/steps/_step-5.html' %}
+{#              {% include 'partials/modals/create-app/steps/_step-1.html' %}#}
+{#              {% include 'partials/modals/create-app/steps/_step-2.html' %}#}
+{#              {% include 'partials/modals/create-app/steps/_step-3.html' %}#}
+{#              {% include 'partials/modals/create-app/steps/_step-4.html' %}#}
+{#              {% include 'partials/modals/create-app/steps/_step-5.html' %}#}
 
               <!--begin::Actions-->
               <div class="d-flex flex-stack pt-10">
