--- a/one/templates/partials/modals/create-app/steps/_step-4.html
+++ b/one/templates/partials/modals/create-app/steps/_step-4.html
@@ -1,7 +1,7 @@
 <!--begin::Step 4-->
 <div data-kt-stepper-element="content">
   <div class="w-100">
-    {% include 'partials/modals/new-card/_form.html' %}
+{#    {% include 'partials/modals/new-card/_form.html' %}#}
   </div>
 </div>
 <!--end::Step 4-->
