--- a/one/templates/partials/modals/create-campaign/_main.html
+++ b/one/templates/partials/modals/create-campaign/_main.html
@@ -53,11 +53,11 @@
           <form class="mx-auto w-100 mw-600px pt-15 pb-10" novalidate="novalidate"
                 id="kt_modal_create_campaign_stepper_form">
 
-            {% include 'partials/modals/create-campaign/steps/_step-1.html' %}
-            {% include 'partials/modals/create-campaign/steps/_step-2.html' %}
-            {% include 'partials/modals/create-campaign/steps/_step-3.html' %}
-            {% include 'partials/modals/create-campaign/steps/_step-4.html' %}
-            {% include 'partials/modals/create-campaign/steps/_step-5.html' %}
+{#            {% include 'partials/modals/create-campaign/steps/_step-1.html' %}#}
+{#            {% include 'partials/modals/create-campaign/steps/_step-2.html' %}#}
+{#            {% include 'partials/modals/create-campaign/steps/_step-3.html' %}#}
+{#            {% include 'partials/modals/create-campaign/steps/_step-4.html' %}#}
+{#            {% include 'partials/modals/create-campaign/steps/_step-5.html' %}#}
 
             <!--begin::Actions-->
             <div class="d-flex flex-stack pt-10">
