--- a/one/templates/partials/modals/create-project/_main.html
+++ b/one/templates/partials/modals/create-project/_main.html
@@ -64,13 +64,13 @@
             <!--begin::Form-->
             <form class="mx-auto w-100 mw-600px pt-15 pb-10" novalidate="novalidate" id="kt_modal_create_project_form"
                   method="post">
-              {% include 'partials/modals/create-project/steps/_type.html' %}
-              {% include 'partials/modals/create-project/steps/_settings.html' %}
-              {% include 'partials/modals/create-project/steps/_budget.html' %}
-              {% include 'partials/modals/create-project/steps/_team.html' %}
-              {% include 'partials/modals/create-project/steps/_targets.html' %}
-              {% include 'partials/modals/create-project/steps/_files.html' %}
-              {% include 'partials/modals/create-project/steps/_complete.html' %}
+{#              {% include 'partials/modals/create-project/steps/_type.html' %}#}
+{#              {% include 'partials/modals/create-project/steps/_settings.html' %}#}
+{#              {% include 'partials/modals/create-project/steps/_budget.html' %}#}
+{#              {% include 'partials/modals/create-project/steps/_team.html' %}#}
+{#              {% include 'partials/modals/create-project/steps/_targets.html' %}#}
+{#              {% include 'partials/modals/create-project/steps/_files.html' %}#}
+{#              {% include 'partials/modals/create-project/steps/_complete.html' %}#}
             </form>
             <!--end::Form-->
           </div>
