--- a/one/templates/partials/modals/users-search/_main.html
+++ b/one/templates/partials/modals/users-search/_main.html
@@ -50,13 +50,13 @@
           <!--begin::Wrapper-->
           <div class="py-5">
 
-            {% include 'partials/modals/users-search/partials/_suggestions.html' %}
+{#            {% include 'partials/modals/users-search/partials/_suggestions.html' %}#}
 
 
-            {% include 'partials/modals/users-search/partials/_results.html' %}
+{#            {% include 'partials/modals/users-search/partials/_results.html' %}#}
 
 
-            {% include 'partials/modals/users-search/partials/_empty.html' %}
+{#            {% include 'partials/modals/users-search/partials/_empty.html' %}#}
 
           </div>
           <!--end::Wrapper-->
