--- a/one/templates/partials/widgets/lists/_widget-14.html
+++ b/one/templates/partials/widgets/lists/_widget-14.html
@@ -14,7 +14,7 @@
       <button class="btn btn-icon btn-color-gray-400 btn-active-color-primary justify-content-end"
               data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end"
               data-kt-menu-overflow="true">{% get_svg_icon 'duotune/general/gen023.svg' 'svg-icon svg-icon-1 svg-icon-gray-300 me-n1' %}</button>
-      {% include 'partials/menus/_menu-2.html' %}
+{#      {% include 'partials/menus/_menu-2.html' %}#}
       <!--end::Menu-->
     </div>
     <!--end::Toolbar-->
