--- a/one/templates/partials/widgets/lists/_widget-15.html
+++ b/one/templates/partials/widgets/lists/_widget-15.html
@@ -536,7 +536,7 @@
         <button class="btn btn-icon btn-sm w-30px h-30px btn-active-light-primary btn-active-color-primary btn-light"
                 data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end"
                 data-kt-menu-overflow="true">{% get_svg_icon 'duotune/arrows/arr001.svg' 'svg-icon svg-icon-5' %}</button>
-        {% include 'partials/menus/_menu-3.html' %}
+{#        {% include 'partials/menus/_menu-3.html' %}#}
         <!--end::Menu-->
       </div>
       <!--end::Content-->
