--- a/one/templates/partials/widgets/tables/_widget-3.html
+++ b/one/templates/partials/widgets/tables/_widget-3.html
@@ -96,7 +96,7 @@
         <!--begin::Filter button-->
         <a href="#" class="text-hover-primary ps-4" data-kt-menu-trigger="click"
            data-kt-menu-placement="bottom-end">{% get_svg_icon 'duotune/general/gen031.svg' 'svg-icon svg-icon-2 svg-icon-gray-400' %}</a>
-        {% include 'partials/menus/_menu-1.html' %}
+{#        {% include 'partials/menus/_menu-1.html' %}#}
         <!--end::Filter button-->
       </div>
       <!--end::Filter-->
