--- a/one/templates/layout/default_header_layout.html
+++ b/one/templates/layout/default_header_layout.html
@@ -6,14 +6,14 @@
   <div class="d-flex flex-column flex-root" id="kt_app_root">
     <!--begin::Page-->
     <div class="app-page flex-column flex-column-fluid" id="kt_app_page">
-      {% include 'partials/header-layout/_header.html' %}
+{#      {% include 'partials/header-layout/_header.html' %}#}
       <!--begin::Wrapper-->
       <div class="app-wrapper flex-column flex-row-fluid" id="kt_app_wrapper">
         <!--begin::Main-->
         <div class="app-main flex-column flex-row-fluid" id="kt_app_main">
           <!--begin::Content wrapper-->
           <div class="d-flex flex-column flex-column-fluid">
-            {% include 'partials/header-layout/_toolbar.html' %}
+{#            {% include 'partials/header-layout/_toolbar.html' %}#}
             <!--begin::Content-->
             <div id="kt_app_content" class="app-content flex-column-fluid">
               <!--begin::Content container-->
@@ -26,7 +26,7 @@
             <!--end::Content-->
           </div>
           <!--end::Content wrapper-->
-          {% include 'partials/header-layout/_footer.html' %}
+{#          {% include 'partials/header-layout/_footer.html' %}#}
         </div>
         <!--end:::Main-->
       </div>
@@ -36,10 +36,10 @@
   </div>
   <!--end::Root-->
 
-  {% include 'partials/_drawers.html' %}
+{#  {% include 'partials/_drawers.html' %}#}
 
-  {% include 'partials/_modals.html' %}
+{#  {% include 'partials/_modals.html' %}#}
 
-  {% include 'partials/_scrolltop.html' %}
+{#  {% include 'partials/_scrolltop.html' %}#}
 
 {% endblock layout %}
