--- a/one/templates/layout/partials/header-layout/header/_navbar.html
+++ b/one/templates/layout/partials/header-layout/header/_navbar.html
@@ -2,7 +2,7 @@
 <div class="app-navbar flex-shrink-0">
   <!--begin::Search-->
   <div class="app-navbar-item align-items-stretch ms-1 ms-lg-3">
-    {% include '../search/_dropdown.html' %}
+{#    {% include '../search/_dropdown.html' %}#}
   </div>
   <!--end::Search-->
   <!--begin::Activities-->
@@ -21,7 +21,7 @@
       class="btn btn-icon btn-custom btn-icon-muted btn-active-light btn-active-color-primary w-35px h-35px w-md-40px h-md-40px"
       data-kt-menu-trigger="click" data-kt-menu-attach="parent"
       data-kt-menu-placement="bottom-end">{% get_svg_icon 'duotune/general/gen022.svg' 'svg-icon svg-icon-1' %}</div>
-    {% include 'partials/menus/_notifications-menu.html' %}
+{#    {% include 'partials/menus/_notifications-menu.html' %}#}
     <!--end::Menu wrapper-->
   </div>
   <!--end::Notifications-->
@@ -44,13 +44,13 @@
       class="btn btn-icon btn-custom btn-icon-muted btn-active-light btn-active-color-primary w-35px h-35px w-md-40px h-md-40px"
       data-kt-menu-trigger="click" data-kt-menu-attach="parent"
       data-kt-menu-placement="bottom-end">{% get_svg_icon 'duotune/general/gen025.svg' 'svg-icon svg-icon-1' %}</div>
-    {% include 'partials/menus/_quick-links-menu.html' %}
+{#    {% include 'partials/menus/_quick-links-menu.html' %}#}
     <!--end::Menu wrapper-->
   </div>
   <!--end::Quick links-->
   <!--begin::Theme mode-->
   <div class="app-navbar-item ms-1 ms-lg-3">
-    {% include 'partials/theme-mode/_main.html' with toggle_btn_class='btn btn-icon btn-custom btn-icon-muted btn-active-light btn-active-color-primary w-35px h-35px w-md-40px h-md-40px'  toggle_btn_icon_class='svg-icon svg-icon-2' %}
+{#    {% include 'partials/theme-mode/_main.html' with toggle_btn_class='btn btn-icon btn-custom btn-icon-muted btn-active-light btn-active-color-primary w-35px h-35px w-md-40px h-md-40px'  toggle_btn_icon_class='svg-icon svg-icon-2' %}#}
   </div>
   <!--end::Theme mode-->
   <!--begin::User menu-->
@@ -60,7 +60,7 @@
          data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end">
       <img src="{% static 'media/avatars/300-1.jpg' %}" alt="user"/>
     </div>
-    {% include 'partials/menus/_user-account-menu.html' %}
+{#    {% include 'partials/menus/_user-account-menu.html' %}#}
     <!--end::Menu wrapper-->
   </div>
   <!--end::User menu-->
