--- a/one/templates/layout/partials/sidebar-layout/header/_menu/__pages.html
+++ b/one/templates/layout/partials/sidebar-layout/header/_menu/__pages.html
@@ -40,27 +40,27 @@
   <div class="tab-content py-4 py-lg-8 px-lg-7">
     <!--begin:Tab pane-->
     <div class="tab-pane active w-lg-1000px" id="kt_app_header_menu_pages_pages">
-      {% include './__pages-general.html' %}
+{#      {% include './__pages-general.html' %}#}
     </div>
     <!--end:Tab pane-->
     <!--begin:Tab pane-->
     <div class="tab-pane w-lg-600px" id="kt_app_header_menu_pages_account">
-      {% include './__pages-account.html' %}
+{#      {% include './__pages-account.html' %}#}
     </div>
     <!--end:Tab pane-->
     <!--begin:Tab pane-->
     <div class="tab-pane w-lg-1000px" id="kt_app_header_menu_pages_authentication">
-      {% include './__pages-authentication.html' %}
+{#      {% include './__pages-authentication.html' %}#}
     </div>
     <!--end:Tab pane-->
     <!--begin:Tab pane-->
     <div class="tab-pane w-lg-1000px" id="kt_app_header_menu_pages_utilities">
-      {% include './__pages-utilities.html' %}
+{#      {% include './__pages-utilities.html' %}#}
     </div>
     <!--end:Tab pane-->
     <!--begin:Tab pane-->
     <div class="tab-pane w-lg-500px" id="kt_app_header_menu_pages_widgets">
-      {% include './__pages-widgets.html' %}
+{#      {% include './__pages-widgets.html' %}#}
     </div>
     <!--end:Tab pane-->
   </div>
