--- a/one/templates/layout/partials/sidebar-layout/header/_menu/_menu.html
+++ b/one/templates/layout/partials/sidebar-layout/header/_menu/_menu.html
@@ -19,7 +19,7 @@
       <!--end:Menu link-->
       <!--begin:Menu sub-->
       <div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown p-0 w-100 w-lg-850px">
-        {% include './__dashboards.html' %}
+{#        {% include './__dashboards.html' %}#}
       </div>
       <!--end:Menu sub-->
     </div>
@@ -35,7 +35,7 @@
       <!--end:Menu link-->
       <!--begin:Menu sub-->
       <div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown p-0">
-        {% include './__pages.html' %}
+{#        {% include './__pages.html' %}#}
       </div>
       <!--end:Menu sub-->
     </div>
@@ -1199,7 +1199,7 @@
       <!--end:Menu link-->
       <!--begin:Menu sub-->
       <div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown p-0 w-100 w-lg-850px">
-        {% include './__layouts.html' %}
+{#        {% include './__layouts.html' %}#}
       </div>
       <!--end:Menu sub-->
     </div>
