--- a/one/templates/partials/_drawers.html
+++ b/one/templates/partials/_drawers.html
@@ -1,4 +1,4 @@
 <!--begin::Drawers-->
-{% include 'partials/drawers/_activity-drawer.html' %}
-{% include 'partials/drawers/_chat-messenger.html' %}
+{#{% include 'partials/drawers/_activity-drawer.html' %}#}
+{#{% include 'partials/drawers/_chat-messenger.html' %}#}
 <!--end::Drawers-->
