--- a/one/templates/partials/drawers/_activity-drawer.html
+++ b/one/templates/partials/drawers/_activity-drawer.html
@@ -508,7 +508,7 @@
               <!--begin::Timeline details-->
               <div class="overflow-auto pb-5">
 
-                {% include 'partials/general/_notice.html' %}
+{#                {% include 'partials/general/_notice.html' %}#}
 
               </div>
               <!--end::Timeline details-->
