--- a/one/templates/partials/widgets/charts/_widget-24.html
+++ b/one/templates/partials/widgets/charts/_widget-24.html
@@ -15,7 +15,7 @@
               data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end" data-kt-menu-overflow="true">
         {% get_svg_icon 'duotune/general/gen023.svg' 'svg-icon svg-icon-1' %}
       </button>
-      {% include 'partials/menus/_menu-2.html' %}
+{#      {% include 'partials/menus/_menu-2.html' %}#}
       <!--end::Menu-->
     </div>
     <!--end::Toolbar-->
