--- a/one/users/templates/users/user_form.html
+++ b/one/users/templates/users/user_form.html
@@ -1,8 +1,7 @@
-{% extends "base.html" %}
+{% extends "users/base.html" %}
 
-{% block content %}
-  <h1>{{ user.username }}</h1>
-  <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
+{% block inner %}
+<form class="form-horizontal" method="post" action="{% url 'users:update' %}">
     {% csrf_token %}
     {{ form }}
     <div class="control-group">
@@ -11,4 +10,5 @@
       </div>
     </div>
   </form>
-{% endblock %}
+
+{% endblock inner %}
